--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/react-jsx-lab#readme",
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "enzyme": "^2.4.1",
